# vlog

./: .gitignore  CHANGE  CMakeLists.txt  README.md
include/: vg_arraylist.h  vg_buf.h  vg_category.h  vg_category_table.h  vg_conf.h  vg_defs.h  vg_event.h  vg_fmacros.h  vg_format.h  vg_hashtable.h  vg_level.h  vg_level_list.h  vg_mdc.h  vg_profile.h  vg_record.h  vg_record_table.h  vg_rotater.h  vg_rule.h  vg_spec.h  vg_thread.h  vg_util.h  vg_xplatform.h  vlg_category.h  vlg_event.h  vlg_format.h  vlg_hashtable.h  vlg_level_list.h  vlg_mdc.h  vlg_record_table.h  vlg_spec.h  vlg_util.h  vlg_xplatform.h  vlog.h
src/: vg_arraylist.c  vg_buf.c  vg_category.c  vg_category_table.c  vg_conf.c  vg_event.c  vg_format.c  vg_hashtable.c  vg_level.c  vg_level_list.c  vg_mdc.c  vg_profile.c  vg_record.c  vg_record_table.c  vg_rotater.c  vg_rule.c  vg_spec.c  vg_thread.c  vg_util.c  vlg_arraylist.c  vlg_arraylist.h  vlg_buf.c  vlg_category.c  vlg_category_table.c  vlg_category_table.h  vlg_conf.c  vlg_conf.h  vlg_defs.h  vlg_event.c  vlg_format.c  vlg_hashtable.c  vlg_level.c  vlg_level.h  vlg_level_list.c  vlg_mdc.c  vlg_profile.c  vlg_profile.h  (+15 more)
test/: CMakeLists.txt  test_bitmap.c  test_buf.c  test_category.c  test_conf.c  test_conf.conf  test_conf2.c  test_conf2.conf.h  test_default.c  test_enabled.c  test_enabled.h  test_hashtable.c  test_hello.c  test_hex.c  test_init.c  test_init.conf  test_leak.c  test_leak.conf  test_level.c  test_level.h  test_longlog.c  test_longlog.conf  test_mdc.c  test_multithread.c  test_pipe.c  test_press_vlog.c  test_press_vlog.conf  test_press_vlog2.c  test_press_write.c  test_press_write2.c  test_profile.c  test_prompt.c  test_record.c  test_syslog.c  test_syslog.conf  test_tmp.c  test_tmp.conf
